--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,23 @@
   padding-left: 143px;
   padding-top: 51px;
 }
+.NY{
+  padding-left: 258px;
+  padding-top: 83px;
+}
+.Boston{
+  padding-left: 591px;
+  padding-top: 73px;
+}
+.date{
+  padding-left: 961px;
+  padding-top: 83px;
+}
+.sun{
+  padding-left: 1179px;
+  padding-top: 83px;
+}
+.temp{
+  padding-left: 1209px;
+  padding-top: 83px;
+}
