--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
   padding-top: 51px;
 }
  .NY{
+  white-space: nowrap;
   width: 203px;
   padding-left: 258px;
   padding-top: 83px;
@@ -30,6 +31,7 @@
   padding-top: 73px;
 }
 .date{
+  white-space: nowrap;
   padding-left: 961px;
   padding-top: 83px;
 }
@@ -38,6 +40,7 @@
   padding-top: 83px;
 }
  .temp{
+  white-space: nowrap;
   padding-left: 1209px;
   padding-top: 83px;
 }
