--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,14 @@
   color: #4B5157;
   line-height: 20px;
 }
-
+.myheader > nav{
+  font-family: Lato;
+  font-size: 14px;
+  color: #FFFFFF;
+  line-height: 20px;
+  padding-top: 152px;
+  background-color: background: #5D5FEF;
+}
 * {
   margin: 0;
   padding: 0;
