--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
   color: #FFFFFF;
   line-height: 20px;
   padding-top: 152px;
-  background-color: background: #5D5FEF;
+  background-color:  #5D5FEF;
 }
 * {
   margin: 0;
