--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
   line-height: 20px;
 }
 .myheader > nav{
-  padding-top: 152px;
+  margin-top: 152px;
   height: 45px;
   background-color:  #5D5FEF;
 }
