--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 .myheader {
   display: flex;
-  flex-direction: column;
   height: 190px;
   background-color: #ffffff;
 }
@@ -12,7 +11,7 @@
   line-height: 20px;
 }
 .myheader > nav{
-  margin-top: auto;
+  margin-top: 152px;
   height: 45px;
   background-color:  #5D5FEF;
 }
