--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,16 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  font-family: Lato;
-  font-size: 14px;
-  color: #FFFFFF;
+  
 }
 .menu ul li{
   float: left;
+}
+.menu ul li a{
+  text-decoration: none;
+  font-family: Lato;
+  font-size: 14px;
+  color: #FFFFFF;
   line-height: 20px;
 }
 * {
