--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,9 @@
 }
 .menu ul{
   list-style-type: none; 
-  margin: 0;
-  padding: 0;
+  margin-top: 17px;
+  margin-left: 113px;
+  margin-right: 113px;
   overflow: hidden;
   
 }
