--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@
 .menu ul{
   display: flex;
   list-style-type: none; 
-  margin-top: 17px;
+  padding-top: 17px;
   margin-left: 113px;
   margin-right: 113px;
   overflow: hidden;
