--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@
   text-decoration: none;
   font-family: Lato;
   font-size: 14px;
-  color: #FFFFFF;
+  color: #cd2e2e;
   line-height: 20px;
 }
 * {
