--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@
   float: left;
 }
 .menu ul li a{
-  display: block;
+  /* display: block; */
   text-decoration: none;
   font-family: Lato;
   font-size: 14px;
