--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@
   border-radius: 10px;
   opacity: 0px;
   margin-left: 113px;
-  margin-top: 30px;
+  padding-top: 30px;
   margin-left: 113px;
 }
 .medium ul li{
