--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@
 .medium{
   height: 475px;
   background-color:  #5D5FEF;
+  padding-top: 30px;
 }
 .medium ul{
   background-color:  #30363D;
@@ -93,12 +94,11 @@
   border-radius: 10px;
   opacity: 0px;
   margin-left: 113px;
-  padding-top: 30px;
-  margin-left: 113px;
+  padding-top: 25px;
+  margin-right: 113px;
 }
 .medium ul li{
   display: inline;
-  padding-top: 25px;
   font-family: Roboto Slab;
   font-size: 16px;
   line-height: 25px;
