--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,8 @@
 }
 .medium ul li{
   display: inline;
+  width:284px;
+  margin-left: 25px;
   text-align: left;
   font-family: Roboto Slab;
   font-size: 16px;
