--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@
   margin-right: 113px;
 }
 .medium ul li{
-  display: inline;
+  display: inline-block;
   width:284px;
   margin-left: 25px;
   text-align: left;
