--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,8 @@
   padding-top: 30px;
 }
 .medium ul{
+  display: flex;
+  justify-content: space-between;
   background-color:  #30363D;
   width: 1140px;
   height: 130px;
@@ -98,7 +100,6 @@
   margin-right: 113px;
 }
 .medium ul li{
-  display: flex;
   width:259px;
   margin-left: 25px;
   text-align: left;
