--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@
   padding-top: 30px;
 }
 .medium ul{
+  list-style-type: none;
   display: flex;
   justify-content: space-between;
   background-color:  #30363D;
