--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@
 .medium ul{
   list-style-type: none;
   display: flex;
-  justify-content:space-around;
+  justify-content:space-between;
   background-color:  #30363D;
   width: 1140px;
   height: 130px;
@@ -101,6 +101,7 @@
   margin-right: 113px;
 }
 .medium ul li{
+  display: inline-block;
   width:259px;
   margin-left: 25px;
   text-align: left;
