--- a/styles.css
+++ b/styles.css
@@ -108,22 +108,12 @@
   font-size: 16px;
   line-height: 25px;
   color: #FFFFFF;
-  /* border-right: 1px solid #4B5157; */
+  border-right: 1px solid #4B5157;
+}
+.medium ul li:last-child{
+  border-right: none;
 }
 
-li::after {
-  content: '|'; /* Содержимое псевдоэлемента */
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 75px; /* Заданная высота границы */
-  width: 1px; /* Ширина границы */
-  background-color: #e00037; /* Цвет границы */
-}
-
-li:last-child::after {
-  display: none; /* Убираем границу у последнего элемента */
-}
 .medium ul li img{
   width: 65px;
   height: 65px;
