--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@
 
 .firsttable{
   margin-left: 113px;
+  border-spacing: 0;
   border: 1px solid #D9DADB;
   border-radius: 10px; 
   overflow: hidden;
