--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,8 @@
 
 .firsttable{
   margin-left: 113px;
+  width: 1150px;
+  height: 570px;
   border-spacing: 0;
   border: 1px solid #D9DADB;
   border-radius: 10px; 
