--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@
   width: 1150px;
   height: 570px;
   border-spacing: 0;
-  border: 1px solid #D9DADB;
+  //border: 1px solid #D9DADB;
   border-radius: 10px; 
   overflow: hidden;
 }
