--- a/styles.css
+++ b/styles.css
@@ -139,8 +139,10 @@
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0.5px;
-  text-align: left;
+  text-align: center;
   color: #5D5FEF;
+  background-color:  #FFFFFF;
+
 }
 .tabl12{
 
