--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@
 .tab11{
   font-family: Lato;
   font-size: 14px;
+  font-weight: bold;
   line-height: 20px;
   text-align: center;
   color: #5D5FEF;
