--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@
 .menu ul li a{
   text-decoration: none;
   font-family: Lato;
+  font-weight: bold;
   font-size: 14px;
   color: #FFFFFFFF;
   line-height: 20px;
