--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,9 @@
   border-radius: 10px; 
   overflow: hidden;
 }
-
+.firsttable td > p{
+  width: 263px;
+}
 .tab11{
   font-family: Lato;
   font-size: 14px;
