--- a/styles.css
+++ b/styles.css
@@ -165,11 +165,12 @@
 }
 
 .tdtext{
+  margin-left: 25px;
   font-family: Lato;
   font-size: 14px;
   font-weight: bold;
   line-height: 20px;
-  text-align: center;
+  text-align: left;
   color:  #4B5157;
 }
 
