--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@
 
 .firsttable{
   margin-left: 113px;
-  margin-top: -285px;
+  padding-top: -285px;
   width: 1150px;
   height: 570px;
   border-spacing: 0;
@@ -166,8 +166,8 @@
   border-radius: 10px 0px 0px 10px;
 }
 .end{
-  margin-top: -287px;
-  height: 1145px;
+  /* margin-top: -287px; */
+  /* height: 1145px; */
   background-color: #D9DADB;
 }
 * {
