--- a/styles.css
+++ b/styles.css
@@ -166,8 +166,8 @@
   border-radius: 10px 0px 0px 10px;
 }
 .end{
-  /* margin-top: -287px; */
-  /* height: 1145px; */
+  margin-top: -287px; 
+  height: 1145px;
   background-color: #D9DADB;
 }
 * {
