--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,9 @@
 }
 
 .medium{
-  height: 475px;
-  background-color:  #5D5FEF;
+  /* height: 475px; */
+  background: linear-gradient(to bottom, #5D5FEF 0px, #5D5FEF 475px, blue #D9DADB, blue #D9DADB);
+  /* background-color:  #5D5FEF; */
   padding-top: 30px;
 }
 .medium ul{
