--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@
 
 .firsttable{
   margin-left: 113px;
-  padding-top: 30px;
+  margin-top: 30px;
   width: 1140px;
   height: 570px;
   border-spacing: 0;
