--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@
 .firsttable td{
   background-color:  #FFFFFF;
   border-bottom: 1px solid #D9DADB;
+  height: 99px;
 }
 .firsttable td > p{
   width: 213px;
