--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@
   background-color:  #FFFFFF;
   border-bottom: 1px solid #D9DADB;
   height: 99px;
+  padding: 0;
 }
 .firsttable td > p{
   width: 213px;
