--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,31 @@
   height: 1145px;
   background-color: #D9DADB;
 }
+.wplay{
+width: 50px;
+height: 50px;
+margin-top: 425px;
+margin-left: 223px;
+}
+.Avatar{
+width: 45px;
+height: 45px;
+margin-top: 55px;
+margin-left: 55px;
+}
+.readmore{
+width: 138px;
+height: 40px;
+margin-top: 55px;
+margin-left: 430px;
+border-radius: 10px;
+background-color: #4592FF;
+font-family: Lato;
+font-size: 14px;
+line-height: 20px;
+text-align: left;
+font-weight: bold;
+}
 * {
   margin: 0;
   padding: 0;
