--- a/styles.css
+++ b/styles.css
@@ -195,11 +195,13 @@ margin-left: 55px;
 .readmore{
 width: 138px;
 height: 40px;
-margin-top: 55px;
-margin-left: 430px;
+margin-top: 430px;
+margin-left: 55px;
+padding-left: 25px;
 border-radius: 10px;
 background-color: #4592FF;
 font-family: Lato;
+color:#FFFFFF;
 font-size: 14px;
 line-height: 20px;
 text-align: left;
