--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ width: 138px;
 height: 40px;
 margin-top: 430px;
 margin-left: 55px;
-padding-left: 25px;
+/* //padding-left: 25px; */
 border-radius: 10px;
 background-color: #4592FF;
 font-family: Lato;
