--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,27 @@
   margin-left: 55px;
   color: #FFFFFF;
 }
+.monttd > a{
+  text-decoration: none;
+  font-family: Lato;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.5px;
+  text-align: left;
+  margin-left: 55px;
+  margin-top: 245px;
+  color:  #4592FF;
+}
+.singlname{
+margin-top: 285px;
+margin-left: 55px; 
+font-family: Roboto Slab;
+font-size: 40px;
+line-height: 50px;
+text-align: left;
+color: #FFFFFF;
+}
+
 .mount{
   width: 877px; 
   height: 570px;
