--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,8 @@ p.singlname{
 position: absolute;
 top: 285px;
 left: 55px; 
+width: 598px;
+height: 100px;
 font-family: Roboto Slab;
 font-size: 40px;
 line-height: 50px;
