--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,15 @@ text-align: left;
 font-weight: bold;
 border: none;
 }
+.arrow{
+position: absolute;
+width: 20px;
+height: 20px;
+top: 10px;
+left: 98px;
+
+
+}
 * {
   margin: 0;
   padding: 0;
