--- a/styles.css
+++ b/styles.css
@@ -48,10 +48,11 @@
   padding-top: 83px;
 }
 .play{
+  position: absolute;
   width: 20px;
   height:20px;
-  float: right;
-  margin-left: -10px;
+  top: 60px;
+  left: 143px;
 }
 
  .menu{
@@ -88,9 +89,7 @@
 }
 
 .medium{
-  /* height: 475px; */
   background: linear-gradient(to bottom, #5D5FEF 0, #5D5FEF 480px,  #D9DADB 480px, #D9DADB 1620px);
-  /* background-color:  #5D5FEF; */
   padding-top: 30px;
 }
 .medium ul{
