--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@ left: 98px;
 margin-top: 30px;
 margin-left: 113px;
 border-collapse: separate; 
-border-spacing: 29px,30px;
+border-spacing: 29px 30px;
 }
 
 .articles td{
