--- a/styles.css
+++ b/styles.css
@@ -303,7 +303,7 @@ left: 175px;
   height: 275px;
   top: -0px;
 }
-.articles td p .tdtitle{
+ .tdtitle{
 font-family: Roboto Slab;
 font-size: 16px;
 font-weight: 700;
@@ -311,14 +311,14 @@ text-align: left;
 line-height: 25px;
 color: #5D5FEF;
 }
-.articles td p .tdtext{
+ .tdtext{
 font-family: Lato;
 font-size: 14px;
 line-height: 20px;
 text-align: left;
 color: #4B5157;
 }
-.articles td p .tdminitext{
+ .tdminitext{
 font-family: Lato;
 font-size: 12px;
 line-height: 15px;
