--- a/styles.css
+++ b/styles.css
@@ -304,26 +304,41 @@ left: 175px;
   top: -0px;
 }
  .tdtitle{
+position:absolute;
 font-family: Roboto Slab;
 font-size: 16px;
 font-weight: 700;
 text-align: left;
 line-height: 25px;
 color: #5D5FEF;
+width: 213px;
+height: 25px;
+top: 25px;
+left: 25px;
 }
  .tdtext{
+position:absolute;
 font-family: Lato;
 font-size: 14px;
 line-height: 20px;
 text-align: left;
 color: #4B5157;
+width: 213px;
+height: 60px;
+top: 55px;
+left: 25px;
 }
  .tdminitext{
+position:absolute;
 font-family: Lato;
 font-size: 12px;
 line-height: 15px;
 text-align: left;
 color: #939699;
+width: 37px;
+height: 15px;
+top: 125px;
+left: 25px;
 }
 * {
   margin: 0;
