--- a/styles.css
+++ b/styles.css
@@ -349,12 +349,14 @@ left: 25px;
   background-repeat: no-repeat;
 }
 .popular{
+position: absolute;
 width: 66px;
 height: 25px;
 top: 18px;
 left: 18px;
 border-radius: 10px;
 border: none;
+background: #3DC47E;
 }
 * {
   margin: 0;
