--- a/styles.css
+++ b/styles.css
@@ -366,7 +366,7 @@ text-align: center;
 color: #FFFFFF;
 }
 
-ul .blacklist{
+div .blacklist{
 list-style-type: none;
 width: 263px;
 height: 770px;
