--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@
 }
 
 .medium{
-  background: linear-gradient(to bottom, #5D5FEF 0, #5D5FEF 480px,  #D9DADB 480px, #D9DADB 1620px);
+  background: linear-gradient(to bottom, #5D5FEF 0, #5D5FEF 480px,  #FFFFFF 480px, #FFFFFF 1620px);
   padding-top: 30px;
 }
 .medium ul{
