--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,7 @@ background-color: #6E99AE;
 margin-top: -800px;
 }
 
-div .blacklist{
+div .blacklist li{
   border-bottom: 1px solid #D1E2EB;
 }
 div .blacklist li img{
