--- a/styles.css
+++ b/styles.css
@@ -374,13 +374,14 @@ list-style-type: none;
 width: 263px;
 height: 770px;
 margin-left: 990px;
-background-color: #6E99AE;
+background-color: #B4D1E0;
 margin-top: -800px;
 }
 
 div .blacklist li{
   border-bottom: 1px solid #D1E2EB;
   border-right: none;
+  margin-left: 0px;
 }
 div .blacklist li img{
   position: absolute;
