--- a/styles.css
+++ b/styles.css
@@ -376,6 +376,7 @@ height: 770px;
 margin-left: 990px;
 background-color: #B4D1E0;
 margin-top: -800px;
+border-width: 213px;
 }
 
 div .blacklist li{
