--- a/styles.css
+++ b/styles.css
@@ -374,13 +374,13 @@ list-style-type: none;
 width: 263px;
 height: 770px;
 margin-left: 990px;
-background-color: #B4D1E0;
+background-color: #6E99AE;
 margin-top: -800px;
 border-width: 213px;
 }
 
 div .blacklist li{
-  border-bottom: 1px solid #D1E2EB;
+  border-bottom: 1px solid #B4D1E0;
   border-right: none;
   margin-left: 0px;
 }
