--- a/styles.css
+++ b/styles.css
@@ -376,6 +376,7 @@ height: 770px;
 margin-left: 990px;
 background-color: #6E99AE;
 margin-top: -800px;
+padding-top: 25px;
 }
 
 div .blacklist li{
