--- a/styles.css
+++ b/styles.css
@@ -87,9 +87,9 @@
 .menu ul li:nth-child(even) {
   margin-right: 47px; 
 }
-
+#EDEFF0
 .medium{
-  background: linear-gradient(to bottom, #5D5FEF 0, #5D5FEF 480px,  #D9DADB 480px, #D9DADB 1620px);
+  background: linear-gradient(to bottom, #5D5FEF 0, #5D5FEF 480px,  #EDEFF0 480px, #EDEFF0 1620px);
   padding-top: 30px;
 }
 .medium ul{
